Displaying Illustlated map/Mercator Map

--- a/editor/mapedit.html
+++ b/editor/mapedit.html
@@ -74,9 +74,9 @@
     </div>
     <div class="tab-pane h100" id="sampleContentB">
       <div class="row h100">
-        <div id="map1" class="col-xs-6 h100">
+        <div id="illstMap" class="col-xs-6 h100">
         </div>
-        <div id="map2" class="col-xs-6 h100">
+        <div id="mercMap" class="col-xs-6 h100">
         </div>
       </div>
     </div>
