Set center & zoom for illustration map and mercator map.

--- a/editor/mapedit.html
+++ b/editor/mapedit.html
@@ -44,15 +44,14 @@
   </div>
   <!-- タブ・メニュー -->
   <ul class="nav nav-tabs nav-justified" role="tablist">
-    <li class="active"><a href="#sampleContentA" data-toggle="tab" role="tab">メタデータ</a></li>
-    <li><a href="#sampleContentB" data-toggle="tab" role="tab">対応点設定</a></li>
-    <li><a href="#sampleContentC" data-toggle="tab" role="tab">ランドマーク設定</a></li>
-    <li class="disabled"><a href="#sampleContentD" role="tab">タブＤ</a></li>
+    <li class="active"><a href="#metadataTab" data-toggle="tab" role="tab">メタデータ</a></li>
+    <li><a href="#gcpsTab" data-toggle="tab" role="tab">対応点設定</a></li>
+    <li class="disabled"><a href="#landmarkTab" role="tab">ランドマーク設定</a></li>
   </ul>
 
   <!-- タブ内容 -->
   <div class="tab-content">
-    <div class="tab-pane active" id="sampleContentA">
+    <div class="tab-pane active" id="metadataTab">
       <form>
         <div class="row">
           <div class="form-group col-xs-5">
@@ -72,7 +71,7 @@
         </div>
       </form>
     </div>
-    <div class="tab-pane h100" id="sampleContentB">
+    <div class="tab-pane h100" id="gcpsTab">
       <div class="row h100">
         <div id="illstMap" class="col-xs-6 h100">
         </div>
@@ -80,11 +79,8 @@
         </div>
       </div>
     </div>
-    <div class="tab-pane" id="sampleContentC">
+    <div class="tab-pane" id="landmarkTab">
       <p>タブＣの内容</p>
-    </div>
-    <div class="tab-pane" id="sampleContentD">
-      <p>タブＤの内容</p>
     </div>
   </div>
 </div> <!-- /container -->
