--- a/editor/mapedit.html
+++ b/editor/mapedit.html
@@ -38,8 +38,11 @@
 
 <div class="container main" role="main">
   <div class="row title-container">
-    <div class="col-xs-12">
-      <span class="map-title">タイトル未設定</span>
+    <div class="col-xs-10">
+      <h4 class="map-title">タイトル未設定</h4>
+    </div>
+    <div class="col-xs-2">
+      <button type="button" class="btn btn-primary" id="saveMap" disabled>保存</button>
     </div>
   </div>
   <!-- タブ・メニュー -->
