--- a/editor/maplist.html
+++ b/editor/maplist.html
@@ -51,6 +51,12 @@
 
 <div class="container main" role="main">
   <ul id="maplist" class="tiles-wrap animated">
+    <li>
+      <a href="mapedit.html">
+        <img src="img/add_image.png" width="190" height="190">
+      </a>
+      <p>新規作成</p>
+    </li>
   </ul>
 </div> <!-- /container -->
 
