--- a/editor/mapedit.html
+++ b/editor/mapedit.html
@@ -29,7 +29,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li><a href="maplist.html">地図一覧</a></li>
+        <li><a href="#" data-nav="maplist.html">地図一覧</a></li>
         <li class="active"><a href="#">地図編集</a></li>
       </ul>
     </div><!--/.nav-collapse -->
