--- a/editor/mapedit.html
+++ b/editor/mapedit.html
@@ -58,9 +58,9 @@
       <form>
         <div class="row">
           <div class="form-group col-xs-5">
-            <label for="title">地図名称</label>
+            <label for="title">地図名称(表示用)</label>
             <input type="text" class="form-control" id="title" aria-describedby="titleHelp" placeholder="地図名を入力してください">
-            <small id="titleHelp" class="form-text text-muted">地図の名称を入力してください。</small>
+            <small id="titleHelp" class="form-text text-muted">地図の表示用名称を入力してください。</small>
           </div>
           <div class="form-group col-xs-5">
             <label for="mapID">地図ID</label>
@@ -78,9 +78,9 @@
         </div>
         <div class="row">
           <div class="form-group col-xs-6">
-            <label for="attr">コピーライト表記</label>
+            <label for="attr">アトリビューション</label>
             <input type="text" class="form-control" id="attr" aria-describedby="attrHelp" placeholder="コピーライト表記を入力してください">
-            <small id="attrHelp" class="form-text text-muted">コピーライト表記を入力してください。</small>
+            <small id="attrHelp" class="form-text text-muted">コピーライト表記等地図隅に表示しておく文字列を入力してください。</small>
           </div>
           <div class="form-group col-xs-3">
             <label for="width">地図画像幅</label>
