--- a/debug.html
+++ b/debug.html
@@ -91,10 +91,10 @@
     </div>
   </div>
 </body>
-<script data-main="js/config" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.min.js"></script>
+<script src="js/config.js"></script>
 <script>
-    document.addEventListener('loadMaplat', function(evt) {
-        var app = evt.detail;
+    Maplat.onLoad(function(MaplatApp) {
         var option = {};
         var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
         for (var i = 0; i < hashes.length; i++) {
@@ -107,9 +107,9 @@
         } else {
             if (!option.lang) option.lang = 'en';
         }
-        app(option);
+        MaplatApp(option);
     });
-    var browserLanguage = function() {
+    function browserLanguage() {
         var ua = window.navigator.userAgent.toLowerCase();
         try {
             // Chrome
