--- a/release.html
+++ b/release.html
@@ -11,20 +11,7 @@
   <div class="container-fluid h100p w100p">
     <div id="all" class="row-fluid h100p">
       <div class="row-fluid mainview">
-        <div id="map_div" class="col-xs-12 h100p w100p">
-          <div class="ol-control map-title"><span></span></div>
-          <img id="center_circle" style="position:absolute;top:50%;left:50%;margin-top:-10px;margin-left:-10px;" src="./parts/redcircle.png">
-          <div class="swiper-container ol-control base-swiper">
-            <i class="fa fa-chevron-left swiper-left-icon" aria-hidden="true"></i>
-            <i class="fa fa-chevron-right swiper-right-icon" aria-hidden="true"></i>
-            <div class="swiper-wrapper"></div>
-          </div>
-          <div class="swiper-container ol-control overlay-swiper">
-            <i class="fa fa-chevron-left swiper-left-icon" aria-hidden="true"></i>
-            <i class="fa fa-chevron-right swiper-right-icon" aria-hidden="true"></i>
-            <div class="swiper-wrapper"></div>
-          </div>
-        </div>
+        <div id="map_div" class="col-xs-12 h100p w100p"></div>
       </div>
       <input type="hidden" name="map_type" id="map_type" value="plat">
     </div> 
@@ -100,7 +87,7 @@
             hash = hashes[i].split('=');
             option[hash[0]] = hash[1];
         }
-        MaplatApp(option);
+        new MaplatApp(option);
     });
 </script>
 </html>
