--- a/debug.html
+++ b/debug.html
@@ -11,26 +11,24 @@
   <div class="container-fluid h100p w100p">
     <div class="row-fluid h100p">
       <div class="row-fluid mainview">
-        <div id="map_div" class="col-xs-12 h100p w100p"></div>
+        <div id="map_div" class="h100p w100p"></div>
       </div>
-      <input type="hidden" name="map_type" id="map_type" value="plat">
     </div>
   </div>
 </body>
-<script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.min.js"></script>
+<script src="js/require.min.js"></script>
 <script src="js/config.js"></script>
 <script>
-    Maplat.onLoad(function(MaplatApp) {
-        var option = {};
-        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-        for (var i = 0; i < hashes.length; i++) {
-            hash = hashes[i].split('=');
-            option[hash[0]] = hash[1];
-        }
-        var app = new MaplatApp(option);
+    var option = {};
+    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+    for (var i = 0; i < hashes.length; i++) {
+        hash = hashes[i].split('=');
+        option[hash[0]] = hash[1];
+    }
+    Maplat.createObject(option).then(function(app){
         app.addEventListener('clickPoi', function(evt) {
             console.log(evt);
-        })
+        });
     });
 </script>
 </html>
