--- a/release.html
+++ b/release.html
@@ -11,86 +11,23 @@
   <div class="container-fluid h100p w100p">
     <div id="all" class="row-fluid h100p">
       <div class="row-fluid mainview">
-        <div id="map_div" class="col-xs-12 h100p w100p"></div>
+        <div id="map_div" class="h100p w100p"></div>
       </div>
-      <input type="hidden" name="map_type" id="map_type" value="plat">
     </div> 
-  </div>
-  <div class="modal" id="poi_info" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">
-            <span aria-hidden="true">&#215;</span><span class="sr-only" data-i18n="html.close"></span>
-          </button>
-          <h4 class="modal-title" id="poi_name"></h4>
-        </div>
-        <div class="modal-body">
-          <div id="poi_web" class="embed-responsive embed-responsive-4by3" style="overflow-y: scroll;">
-            <iframe id="poi_iframe" width="99.6%" frameborder="0" src=""></iframe>
-          </div>
-          <div id="poi_data" class="hide">
-            <p class="col-xs-12 poi_img"><img id="poi_img" src=""></img></p>
-            <p class="recipient" id="poi_address"></p>
-            <p class="recipient" id="poi_desc"></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal" id="loadWait" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title" data-i18n="html.app_loading_title"></h4>
-        </div>
-        <div class="modal-body">
-          <p class="recipient"><img src="parts/loading.gif"><span data-i18n="html.app_loading_body"></span></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal" id="gpsWait" tabindex="-1" role="dialog" aria-labelledby="staticModalLabel" aria-hidden="true" data-show="true" data-keyboard="false" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title"><span data-i18n="html.acquiring_gps"></span></h4>
-        </div>
-        <div class="modal-body">
-          <p id="gps_etc" class="recipient"></p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal" id="gpsDialog" tabindex="-1" role="dialog" aria-labelledby_="staticModalLabel" aria-hidden_="true" data-show="true" data-keyboard="false" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">
-            <span aria-hidden="true">&#215;</span><span class="sr-only" data-i18n="html.close"></span>
-          </button>
-          <h4 class="modal-title" id="gpsDialogTitle"></h4>
-        </div>
-        <div class="modal-body">
-          <p id="gpsDialogBody" class="recipient"></p>
-        </div>
-      </div>
-    </div>
   </div>
 </body>
 <script src="js/maplat.js"></script>
 <script>
-    Maplat.onLoad(function(MaplatApp) {
-        var option = {};
-        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-        for (var i = 0; i < hashes.length; i++) {
-            hash = hashes[i].split('=');
-            option[hash[0]] = hash[1];
-        }
-        var app = new MaplatApp(option);
+    var option = {};
+    var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+    for (var i = 0; i < hashes.length; i++) {
+        hash = hashes[i].split('=');
+        option[hash[0]] = hash[1];
+    }
+    Maplat.createObject(option).then(function(app){
         app.addEventListener('clickPoi', function(evt) {
             console.log(evt);
-        })
+        });
     });
 </script>
 </html>
