Aigleを外出しに、minifyすることを断念

--- a/release.html
+++ b/release.html
@@ -16,6 +16,7 @@
     </div> 
   </div>
 </body>
+<script src="js/aigle-es5.min.js"></script>
 <script src="js/maplat.js"></script>
 <script>
     var option = {};
