PWA対応おそらく完了

--- a/release.html
+++ b/release.html
@@ -25,7 +25,7 @@
         option[hash[0]] = hash[1];
     }
     Maplat.createObject(option).then(function(app){
-        app.addEventListener('clickPoi', function(evt) {
+        app.addEventListener('clickMarker', function(evt) {
             console.log(evt);
         });
     });
