--- a/debug.html
+++ b/debug.html
@@ -27,20 +27,9 @@
         option[hash[0]] = hash[1];
     }
     Maplat.createObject(option).then(function(app){
-        app.addEventListener('clickPoi', function(evt) {
+        app.addEventListener('clickMarker', function(evt) {
             console.log(evt);
         });
     });
-</script>
-<script>
-    var tmp = document.createDocumentFragment().appendChild( document.createElement('div'));
-    tmp.innerHTML = "<link rel=\"manifest\" href=\"./pwa/manifest.json\">";
-    document.querySelector('head').appendChild(tmp.childNodes[0]);
-    tmp.innerHTML = "<link rel=\"apple-touch-icon\" href=\"/Maplat/pwa/icon-144.png\">";
-    document.querySelector('head').appendChild(tmp.childNodes[0]);
-    // service workerが有効なら、service-worker.js を登録します
-    if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./service-worker.js').then(function() { console.log('Service Worker Registered'); });
-    }
 </script>
 </html>
