lessからのcss生成、maplat名前空間にcss封入

--- a/debug.html
+++ b/debug.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="mainview">
-        <div id="map_div"></div>
+        <div id="map_div" class="maplat"></div>
     </div>
 </body>
 <script src="js/aigle-es5.min.js"></script>
