--- a/release.html
+++ b/release.html
@@ -5,7 +5,7 @@
   <title>Maplat</title>
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="css/maplat.css">
   <style>
     .mainview {
         position: absolute;
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="mainview">
-        <div id="map_div"></div>
+        <div id="map_div" class="maplat"></div>
     </div>
 </body>
 <script src="js/maplat.js"></script>
