--- a/debug.html
+++ b/debug.html
@@ -22,7 +22,7 @@
     <div id="map_div"></div>
   </div>
 </body>
-<script src="lib/aigle-es5.min.js"></script>
+<!--script src="lib/aigle-es5.min.js"></script-->
 <script src="lib/require.min.js"></script>
 <script src="js/config_ui.js"></script>
 <script>
@@ -33,13 +33,13 @@
         option[hash[0]] = hash[1];
     }
     Maplat.createObject(option).then(function(app) {
-        app.addEventListener('clickMarker', function (evt) {
+        app.core.addEventListener('clickMarker', function (evt) {
             console.log(evt);
         });
-        app.addEventListener('clickMap', function (evt) {
+        app.core.addEventListener('clickMap', function (evt) {
             console.log(evt);
         });
-        app.addLine({
+        app.core.addLine({
             lnglats: [[141.151995, 39.701599], [141.151137, 39.703736], [141.1521671, 39.7090232]],
             stroke: {
                 color: '#ffcc33',
