Android、値コールバック実装完了

--- a/api_debug.html
+++ b/api_debug.html
@@ -33,6 +33,7 @@
         option[hash[0]] = hash[1];
     }
     Maplat.createObject(option).then(function(app){
+        console.log(app.currentMapID());
         app.addEventListener('clickMarker', function(evt) {
             console.log(evt);
         });
