--- a/debug.html
+++ b/debug.html
@@ -27,7 +27,7 @@
 <script src="js/config_ui.js"></script>
 <script>
     var option = {
-        cache_enable: false
+        cache_enable: true
     };
     var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
     for (var i = 0; i < hashes.length; i++) {
