updateStateイベント作成対応

--- a/debug.html
+++ b/debug.html
@@ -45,6 +45,9 @@
         app.core.addEventListener('changeViewpoint', function (evt) {
             console.log(evt);
         });
+        app.core.addEventListener('updateState', function (evt) {
+            console.log(evt);
+        });
         app.core.addLine({
             lnglats: [[141.151995, 39.701599], [141.151137, 39.703736], [141.1521671, 39.7090232]],
             stroke: {
