--- a/debug.html
+++ b/debug.html
@@ -29,7 +29,7 @@
     var option = {
         cache_enable: true,
         restore_session: false,
-        state_url: false
+        state_url: true
     };
     var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
     for (var i = 0; i < hashes.length; i++) {
