--- a/debug.html
+++ b/debug.html
@@ -36,7 +36,7 @@
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
     for (var i = 0; i < hashes.length; i++) {
         hash = hashes[i].split('=');
-        option[hash[0]] = hash[1];
+        option[hash[0]] = hash[1] == 'true' ? true : hash[1] == 'false' ? false : hash[1];
     }
     Maplat.createObject(option).then(function(app) {
         /*app.core.addEventListener('clickMarker', function (evt) {
