--- a/debug.html
+++ b/debug.html
@@ -30,7 +30,8 @@
         cache_enable: true,
         restore_session: true,
         state_url: true,
-        share_enable: true
+        share_enable: true,
+        presentation_mode: true
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
