pwa settingを変更。PWA対応をデフォルトオンからデフォルトオフに変更

--- a/debug.html
+++ b/debug.html
@@ -31,7 +31,8 @@
         restore_session: true,
         state_url: true,
         share_enable: true,
-        presentation_mode: true
+        presentation_mode: true,
+        pwa_manifest: true
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
