--- a/api_debug.html
+++ b/api_debug.html
@@ -35,6 +35,7 @@
     <button id="clear2">clearMarker(Main2)</button>
     <button id="addMap">addMarker(Map)</button>
     <button id="clearMap">clearMarker(Map)</button>
+    <button id="unSelect">unSelect</button>
   </div>
 </body>
 <!--script src="lib/aigle-es5.min.js"></script-->
@@ -51,6 +52,7 @@
         console.log(app.currentMapInfo());
         console.log(app.mapInfo('gsi'));
         app.addEventListener('clickMarker', function(evt) {
+            app.selectMarker(evt.detail.namespace_id);
             console.log(evt);
         });
         app.addEventListener('clickMap', function (evt) {
@@ -64,7 +66,10 @@
             }
         });
         app.addPoiLayer('main2');
-        app.addPoiLayer('morioka_ndl2#main2');
+        app.addPoiLayer('morioka_ndl2#main2', {
+            icon: 'parts/blue_marker.png',
+            selected_icon: 'parts/red_marker.png'
+        });
         document.getElementById('clear').addEventListener('click', function(e) {
             app.clearMarker('main');
         });
@@ -102,6 +107,9 @@
         });
         document.getElementById('clearMap').addEventListener('click', function(e) {
             app.clearMarker('morioka_ndl2#all');
+        });
+        document.getElementById('unSelect').addEventListener('click', function(e) {
+            app.unselectMarker();
         });
     });
 </script>
