--- a/debug.html
+++ b/debug.html
@@ -32,7 +32,8 @@
         state_url: true,
         share_enable: true,
         presentation_mode: true,
-        pwa_manifest: true
+        pwa_manifest: true,
+        overlay: false
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
