--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         app.addEventListener('clickMap', function (evt) {
             console.log(evt);
         });
-        app.addLine({
+        app.core.addLine({
             lnglats: [[141.151995, 39.701599], [141.151137, 39.703736], [141.1521671, 39.7090232]],
             stroke: {
                 color: '#ffcc33',
