Maplat Core 0.6.3 beta test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <link rel="icon" type="image/png" href="parts/favicon.png">
+  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css" rel="stylesheet">
   <link rel="stylesheet" href="dist/maplat.css">
   <style>
     .mainview {
@@ -22,6 +23,7 @@
     <div id="map_div"></div>
   </div>
 </body>
+<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
 <script src="dist/maplat.js"></script>
 <script>
     var option = {
@@ -30,7 +32,9 @@
         state_url: true,
         share_enable: true,
         presentation_mode: true,
-        pwa_manifest: true
+        pwa_manifest: true,
+        mapboxgl: mapboxgl,
+        mapboxToken: 'pk.eyJ1IjoicmVraXNoaWtva3VkbyIsImEiOiJjazRoMmF3dncwODU2M2ttdzI2aDVqYXVwIn0.8Hb9sekgjfck6Setxk5uVg'
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
