* Update Maplat Core to 0.6.5 * Change option name "share_enable" to "enable_share"

--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@
 <script src="dist/maplat.js"></script>
 <script>
     var option = {
-        cache_enable: true,
+        enable_cache: true,
         restore_session: true,
         state_url: true,
-        share_enable: true,
+        enable_share: true,
         presentation_mode: true,
         pwa_manifest: true,
         mapboxgl: mapboxgl,
-        mapboxToken: 'YOUR-ACCESS-TOKEN'
+        //mapboxToken: 'YOUR-ACCESS-TOKEN'
+        mapboxToken: 'pk.eyJ1IjoicmVraXNoaWtva3VkbyIsImEiOiJjazRoMmF3dncwODU2M2ttdzI2aDVqYXVwIn0.8Hb9sekgjfck6Setxk5uVg'
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
