Remove access token

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         presentation_mode: true,
         pwa_manifest: true,
         mapboxgl: mapboxgl,
-        //mapboxToken: 'YOUR-ACCESS-TOKEN'
-        mapboxToken: 'pk.eyJ1IjoicmVraXNoaWtva3VkbyIsImEiOiJjazRoMmF3dncwODU2M2ttdzI2aDVqYXVwIn0.8Hb9sekgjfck6Setxk5uVg'
+        mapboxToken: 'YOUR-ACCESS-TOKEN'
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
