--- a/index_packed.html
+++ b/index_packed.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <link rel="icon" type="image/png" href="parts/favicon.png">
   <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css" rel="stylesheet">
-  <link rel="stylesheet" href="dist/maplat.css">
+  <link rel="stylesheet" href="dist/maplat_packed.css">
   <style>
     .mainview {
         position: absolute;
