--- a/sabaemap.html
+++ b/sabaemap.html
@@ -68,7 +68,7 @@
     <div id="map_div"></div>
   </div>
 
-<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
+<script src="assets/mapbox-gl.js"></script>
 <script src="assets/maplat.js"></script>
 <script>
   var ip;
@@ -82,7 +82,7 @@
     stateUrl: true,
     enableShare: true
   };
-  option.mapboxgl = mapboxgl;
+  option.mapboxgl = mapboxgl || {};
   option.mapboxToken = 'pk.eyJ1IjoicmVraXNoaWtva3VkbyIsImEiOiJjazRoMmF3dncwODU2M2ttdzI2aDVqYXVwIn0.8Hb9sekgjfck6Setxk5uVg';
   var hashes = (window.location.href.split('#!'))[0];
   hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
