--- a/sabaemap.html
+++ b/sabaemap.html
@@ -82,7 +82,7 @@
     stateUrl: true,
     enableShare: true
   };
-  option.mapboxgl = mapboxgl || {};
+  option.mapboxgl = mapboxgl;
   option.mapboxToken = 'pk.eyJ1IjoicmVraXNoaWtva3VkbyIsImEiOiJjazRoMmF3dncwODU2M2ttdzI2aDVqYXVwIn0.8Hb9sekgjfck6Setxk5uVg';
   var hashes = (window.location.href.split('#!'))[0];
   hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
