mapbox-gl.cssも対応

--- a/sabaemap.html
+++ b/sabaemap.html
@@ -3,7 +3,7 @@
   <title>鯖江市古地図アプリ</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css" rel="stylesheet">
+  <link href="assets/mapbox-gl.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/maplat.css">
   <style>
     .mainview {
