--- a/tatebayashimap.html
+++ b/tatebayashimap.html
@@ -21,8 +21,8 @@
   <link rel="alternate" href="https://s.maplat.jp/r/tatebayashimap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tatebayashi_manifest.json">
   <meta property="og:title" content="ぷらっと館林 - 館林を楽しむ古地図/絵地図街歩きアプリ">
-  <meta name="description" content="まち歩きの地図サービス「ぷらっと館林」を片手に館林城下を散策してみませんか。話題のアニメ「宇宙よりも遠い場所」聖地巡礼マップ、徳川綱吉が藩主だった頃の古地図、幕末の名君、秋元志朝の頃の古地図や観光地図を収録。今ここではない時代に思いを馳せながら、ぷらぷら歩くのはきっと楽しいですよ。">
-  <meta property="og:description" content="まち歩きの地図サービス「ぷらっと館林」を片手に館林城下を散策してみませんか。話題のアニメ「宇宙よりも遠い場所」聖地巡礼マップ、徳川綱吉が藩主だった頃の古地図、幕末の名君、秋元志朝の頃の古地図や観光地図を収録。今ここではない時代に思いを馳せながら、ぷらぷら歩くのはきっと楽しいですよ。">
+  <meta name="description" content="まち歩きの地図サービス「ぷらっと館林」を片手に館林城下を散策してみませんか。徳川綱吉が藩主だった頃の古地図、幕末の名君、秋元志朝の頃の古地図や観光地図を収録。今ここではない時代に思いを馳せながら、ぷらぷら歩くのはきっと楽しいですよ。">
+  <meta property="og:description" content="まち歩きの地図サービス「ぷらっと館林」を片手に館林城下を散策してみませんか。徳川綱吉が藩主だった頃の古地図、幕末の名君、秋元志朝の頃の古地図や観光地図を収録。今ここではない時代に思いを馳せながら、ぷらぷら歩くのはきっと楽しいですよ。">
   <meta name="keywords" content="ぷらっと館林 - 館林を楽しむ古地図/絵地図街歩きアプリ,古地図,絵地図,散歩,街歩き,観光,歴史">
 <link rel="icon" type="image/png" sizes="196x196" href="pwa/tatebayashi/favicon-196.png">
 
