North Upテスト実装

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         enable_share: true,
         presentation_mode: true,
         pwa_manifest: true,
+        northTop: true,
         mapboxgl: mapboxgl,
         mapboxToken: 'YOUR-ACCESS-TOKEN'
     };
