--- a/tatebayashitestmap.html
+++ b/tatebayashitestmap.html
@@ -16,9 +16,9 @@
   </style>
   <meta property="og:image" content="https://s.maplat.jp/r/tatebayashitest/img/tatebayashi_splash.png">
   <meta name="twitter:card" content="summary">
-  <link rel="canonical" href="https://s.maplat.jp/r/tatebayashitest/">
-  <link rel="alternate" href="https://s.maplat.jp/r/tatebayashitest/?lang=ja" hreflang="ja">
-  <link rel="alternate" href="https://s.maplat.jp/r/tatebayashitest/?lang=en" hreflang="en">
+  <link rel="canonical" href="https://s.maplat.jp/r/tatebayashitestmap/">
+  <link rel="alternate" href="https://s.maplat.jp/r/tatebayashitestmap/?lang=ja" hreflang="ja">
+  <link rel="alternate" href="https://s.maplat.jp/r/tatebayashitestmap/?lang=en" hreflang="en">
   <link rel="manifest" href="./pwa/tatebayashitest_manifest.json">
   <meta property="og:title" content="ぷらっと館林 - 館林を楽しむ古地図/絵地図街歩きアプリ">
   <meta name="description" content="まち歩きの地図サービス「ぷらっと館林」を片手に館林城下を散策してみませんか。徳川綱吉が藩主だった頃の古地図、幕末の名君、秋元志朝の頃の古地図や観光地図を収録。今ここではない時代に思いを馳せながら、ぷらぷら歩くのはきっと楽しいですよ。">
