--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         enable_share: true,
         presentation_mode: true,
         pwa_manifest: true,
-        northTop: true,
+        northUp: true,
         mapboxgl: mapboxgl,
         mapboxToken: 'YOUR-ACCESS-TOKEN',
         tapDuration: 60000
