--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
         northUp: true,
         mapboxgl: mapboxgl,
         mapboxToken: 'YOUR-ACCESS-TOKEN',
-        tapDuration: 60000
+        tapDuration: 60000,
+        tapUIVanish: true
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
