HTML POI高さ合わせ

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,8 @@
         mapboxgl: mapboxgl,
         mapboxToken: 'YOUR-ACCESS-TOKEN',
         tapDuration: 60000,
-        tapUIVanish: true
+        tapUIVanish: true,
+        enablePoiHtmlNoScroll: true
     };
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
