--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Maplat</title>
-  <meta content="yes" name="apple-mobile-web-app-capable">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <link rel="icon" type="image/png" href="parts/favicon.png">
-  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css" rel="stylesheet">
-  <style>
-    .mainview {
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Maplat</title>
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
+    <link rel="icon" type="image/png" href="parts/favicon.png">
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
+    <style>
+        .mainview {
+            position: absolute;
+            top: 0px;
+            bottom: 0px;
+            left: 0px;
+            right: 0px;
+        }
+    </style>
 </head>
+
 <body>
-  <div class="mainview">
-    <div id="map_div"></div>
-  </div>
-  <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js"></script>
+    <div class="mainview">
+        <div id="map_div"></div>
+    </div>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
 </body>
 <script>
     var option = {
@@ -44,8 +47,8 @@
         hash = hashes[i].split('=');
         option[hash[0]] = hash[1] == 'true' ? true : hash[1] == 'false' ? false : hash[1];
     }
-    Maplat.createObject(option).then(function(app){
-        app.addEventListener('clickMarker', function(evt) {
+    Maplat.createObject(option).then(function (app) {
+        app.addEventListener('clickMarker', function (evt) {
             console.log(evt);
         });
         app.addEventListener('clickMap', function (evt) {
@@ -60,4 +63,5 @@
         });
     });
 </script>
+
 </html>
