--- a/tamamuramap.html
+++ b/tamamuramap.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
+
   <link rel="stylesheet" href="assets/maplat.css">
   <style>
     .mainview {
@@ -101,7 +101,7 @@
     <div id="map_div"></div>
   </div>
 
-  <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
+
   <script src="assets/maplat.js"></script>
   <script>
     var ip;
@@ -113,10 +113,10 @@
       enableBorder: true,
       enableCache: true,
       stateUrl: true,
-      enableShare: true
+      enableShare: true,
+      mapboxToken: 'pk.eyJ1Ijoia29jaGl6dWZhbiIsImEiOiJjbHRnaWhzOW8wd2p4MmtvZDFsOWJiOG40In0.FYTPboTqXKv5a_onOaW1vQ',
+      googleApiKey: 'AIzaSyB0v_F9EVPbE7R2uOm6Mixrtzts21DEICc'
     };
-    option.mapboxgl = mapboxgl;
-    option.mapboxToken = 'pk.eyJ1IjoicmVraXNoaWtva3VkbyIsImEiOiJjazRoMmF3dncwODU2M2ttdzI2aDVqYXVwIn0.8Hb9sekgjfck6Setxk5uVg';
     var hashes = (window.location.href.split('#!'))[0];
     hashes = hashes.slice(window.location.href.indexOf('?') + 1).split('&');
     for (var i = 0; i < hashes.length; i++) {
