--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
 </body>
 <script>
     var option = {
-        enable_cache: true,
-        restore_session: false,
-        state_url: false,
-        enable_share: true,
-        presentation_mode: true,
-        pwa_manifest: true,
+        enableCache: true,
+        restoreSession: false,
+        stateUrl: false,
+        enableShare: true,
+        presentationMode: true,
+        pwaManifest: true,
         northUp: true,
         mapboxToken: 'pk.eyJ1Ijoia29jaGl6dWZhbiIsImEiOiJjbHRnaWhzOW8wd2p4MmtvZDFsOWJiOG40In0.FYTPboTqXKv5a_onOaW1vQ',
         googleApiKey: 'AIzaSyB0v_F9EVPbE7R2uOm6Mixrtzts21DEICc',
