大和郡山専用対応

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
 </body>
 <script>
     var option = {
+        fake: true,
+        //alwaysGpsOn: true,
         enableCache: true,
         restoreSession: false,
         stateUrl: false,
