常時表示完成

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 </body>
 <script>
     var option = {
-        fake: true,
+        //fake: true,
         //alwaysGpsOn: true,
         enableCache: true,
         restoreSession: false,
