Update font (Not css)

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
         restoreSession: false,
         stateUrl: false,
         enableShare: true,
+        enableBorder: true,
+        enableHideMarker: true,
         presentationMode: true,
         pwaManifest: true,
         northUp: true,
