--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         enableShare: true,
         enableBorder: true,
         enableHideMarker: true,
+        enableMarkerList: true,
         presentationMode: true,
         pwaManifest: true,
         northUp: true,
