--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         //alwaysGpsOn: true,
         enableCache: true,
         restoreSession: false,
-        stateUrl: false,
+        stateUrl: true,
         enableShare: true,
         enableBorder: true,
         enableHideMarker: true,
