POIのリスト表示

--- a/public/index.html
+++ b/public/index.html
@@ -106,10 +106,12 @@
   <script>
     var ip;
     var option = {
+      fake: true,
       appid: "sample",
       pwaManifest: true,
       overlay: true,
       enableHideMarker: true,
+      enableMarkerList: true,
       enableBorder: true,
       enableCache: true,
       stateUrl: true,
