--- a/dist_packed/index.html
+++ b/dist_packed/index.html
@@ -13,6 +13,7 @@
       enableHideMarker: true,
       enableMarkerList: true,
       enableBorder: true,
+      enableHideMarker: true,
       enableCache: true,
       stateUrl: true,
       enableShare: true,
