--- a/mitomap.html
+++ b/mitomap.html
@@ -111,6 +111,7 @@
       overlay: true,
       enableHideMarker: true,
       enableBorder: true,
+      enableHideMarker: true,
       enableCache: true,
       stateUrl: true,
       enableShare: true,
