--- a/samplat.html
+++ b/samplat.html
@@ -77,6 +77,7 @@
     overlay: true,
     enableHideMarker: true,
     enableBorder: true,
+    enableHideMarker: true,
     enableCache: true,
     stateUrl: true,
     enableShare: true,
