--- a/samplemap.html
+++ b/samplemap.html
@@ -109,6 +109,7 @@
       overlay: true,
       enableHideMarker: true,
       enableBorder: true,
+      enableHideMarker: true,
       enableCache: true,
       stateUrl: true,
       enableShare: true,
