--- a/sabaemap.html
+++ b/sabaemap.html
@@ -78,6 +78,7 @@
     overlay: true,
     enableHideMarker: true,
     enableBorder: true,
+    enableMarkerList: true,
     enableCache: true,
     stateUrl: true,
     enableShare: true
