--- a/ohmihachimanmap.html
+++ b/ohmihachimanmap.html
@@ -77,6 +77,7 @@
     overlay: true,
     enableHideMarker: true,
     enableBorder: true,
+    enableMarkerList: true,
     enableCache: true,
     stateUrl: true,
     enableShare: true,
