--- a/tatebayashimap.html
+++ b/tatebayashimap.html
@@ -111,6 +111,7 @@
       overlay: true,
       enableHideMarker: true,
       enableBorder: true,
+      enableMarkerList: true,
       enableCache: true,
       stateUrl: true,
       enableShare: true,
