--- a/tatsunomap.html
+++ b/tatsunomap.html
@@ -109,6 +109,7 @@
       overlay: true,
       enableHideMarker: true,
       enableBorder: true,
+      enableMarkerList: true,
       enableCache: true,
       stateUrl: true,
       enableShare: true,
